Mejorando el admin

--- a/app/views/admin/cards/_card.html.erb
+++ b/app/views/admin/cards/_card.html.erb
@@ -7,11 +7,12 @@
       <%= link_to 'Ver esta ficha en la web', "/#{card.url}" %>
     </div>
 
-    <ul class="tabs">
-      <%= li_link_to_unless_current 'General', edit_admin_card_path(card) %>
-      <%= li_link_to_unless_current 'Fotos / Vídeos', admin_card_slide_images_path(card) %>
-      <%= li_link_to_unless_current 'Ficheros', admin_card_card_files_path(card) %>
-      <%= li_link_to_unless_current 'Seleccion', admin_card_selections_path(card) %>
-      <%= li_link_to_unless_current 'Actual', admin_card_posts_path(card) %>
-    </ul>
+    <% unless card.new_record? %>
+        <ul class="tabs">
+          <%= li_link_to_unless_current 'General', edit_admin_card_path(card) %>
+          <%= li_link_to_unless_current 'Fotos / Vídeos', admin_card_slide_images_path(card) %>
+          <%= li_link_to_unless_current 'Ficheros', admin_card_card_files_path(card) %>
+          <%= li_link_to_unless_current 'Seleccion', admin_card_selections_path(card) %>
+        </ul>
+    <% end %>
 <% end %>
