--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -4,8 +4,10 @@
   <div id="grid">
     <div id="content">
       <% @cards.each do |card| %>
-          <%= pinta_card(card) if card.visible? %>
-          <%#= pinta_milestones(card) if card.visible? %>
+          <% if card.displayable? %>
+              <%= pinta_card(card) %>
+              <%= pinta_milestones(card) %>
+          <% end %>
       <% end %>
       <div id="preview" style="display: none">&nbsp;</div>
       <div id="loading" style="display: none">
