--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -1,4 +1,8 @@
 
-<%= title "Actualidad de '#{@parent.title}'" %>
+<%= title "Noticias" %>
+
+<div class="actions">
+  <%= link_to 'añadir noticia', new_admin_post_path %>
+</div>
 
 <%= render 'index' %>
