--- a/app/views/pages/_selected.html.erb
+++ b/app/views/pages/_selected.html.erb
@@ -7,6 +7,6 @@
   </div>
   <div class="data">
     <div class="date"><%= year_of selected.date %></div>
-    <div class="body"><%= textilize selected.body %></div>
+    <div class="body"><%= render_body selected %></div>
   </div>
 </div>
