--- a/app/views/admin/cards/_card.html.erb
+++ b/app/views/admin/cards/_card.html.erb
@@ -1,10 +1,10 @@
 <%= div_for card do %>
     <div class="actions">
-      <%= (link_to 'Borrar esta ficha', [:admin, card], :method => 'delete',
-                   :confirm => "Estás a punto de borrar la ficha '#{card.title}' ¿Estás segura?") unless card.id == 1 %>
-      <%= action_separator %>
       <%= link_to raw('&larr; Volver a la lista de fichas'), admin_cards_path %>
       <%= link_to 'Ver esta ficha en la web', "/#{card.url}" %>
+      <%= link_to 'Borrar esta ficha', [:admin, card], class: 'delete', method: :delete,
+                  :confirm => "Estás a punto de borrar la ficha '#{card.title}' ¿Estás segura? ¡no se puede deshacer!" unless card.id == 1 %>
+
     </div>
 
     <% unless card.new_record? %>
