--- a/app/views/admin/colors/index.html.erb
+++ b/app/views/admin/colors/index.html.erb
@@ -10,7 +10,7 @@
           <td/></tr>
       </thead>
       <tbody>
-        <% @colors.each do |color| %>
+        <% colors.each do |color| %>
           <tr>
             <td><%= color.name %></td>
             <td><%= color_example color.value %></td>
