--- a/app/views/admin/pans/_form.html.erb
+++ b/app/views/admin/pans/_form.html.erb
@@ -1,13 +1,13 @@
 <%= simple_form_for [:admin, resource] do |form| %>
     <%= form.input :card_id, as: :hidden %>
-    <% if resource.image_url %>
+    <% if resource.file.present? %>
         <div class="current_image">
           <label>Imágen actual:</label>
-          <%= image_tag resource.image_url %>
+          <%= image_tag resource.file.url %>
           <div class="hint">Puedes sustituir ésta imágen por otra en con el campo de abajo</div>
         </div>
     <% end %>
-    <%= form.input :image, as: :file, label: 'Imágen' %>
+    <%= form.input :file, as: :file, label: 'Imágen' %>
     <%= form.input :body, as: :text, label: 'Texto' %>
     <%= form.input :date, label: 'Fecha' %>
     <%= form.input :position %>
