--- a/app/views/admin/cards/_form.html.erb
+++ b/app/views/admin/cards/_form.html.erb
@@ -85,7 +85,7 @@
           la imágen principal debe tener un máximo de 000px de ancho por 000px de alto</span>
 
           <% if card.main_image.present? %>
-              <%= image_tag card.main_image.filename %>
+              <%= image_tag card.main_image.file.url %>
               <span class="info">Para cambiar esta imágen, sube otra.</span>
           <% else %>
           <% end %>
