--- a/app/views/admin/tags/_form.html.erb
+++ b/app/views/admin/tags/_form.html.erb
@@ -1,11 +1,11 @@
-<%= form_for([:admin, @tag]) do |form| %>
+<%= form_for [:admin, category] do |form| %>
     <p>
       <label for="tag_name">Nombre</label>
       <%= form.text_field :name %>
     </p>
     <label>Color</label>
     <table>
-      <% @colors.each do |color| %>
+      <% colors.each do |color| %>
           <tr>
             <td><%= form.radio_button :color_id, color.id %></td>
             <td><%= color_example color.value %></td>
@@ -15,6 +15,6 @@
       <% end %>
     </table>
     <p>
-      <%= form.submit %>
+      <%=  form.submit %>
     </p>
-<% end -%>
+<% end %>
