--- a/app/views/admin/tags/index.html.erb
+++ b/app/views/admin/tags/index.html.erb
@@ -15,7 +15,7 @@
           <td/></tr>
       </thead>
       <tbody>
-        <% @tags.each do |tag| %>
+        <% categories.each do |tag| %>
           <tr>
             <td><%= link_to tag.name, edit_admin_tag_path(tag), :style => "color: " %></td>
             <td>
@@ -26,10 +26,10 @@
             <td>
               <%= tag.position %>
               <div>
-                <%= link_to image_tag('move_top.png'), admin_tag_position_path(tag, move: :top), method: :put %>
-                <%= link_to image_tag('move_up.png'), admin_tag_position_path(tag, move: :up), method: :put %>
-                <%= link_to image_tag('move_down.png'), admin_tag_position_path(tag, move: :down), method: :put %>
-                <%= link_to image_tag('move_bottom.png'), admin_tag_position_path(tag, move: :bottom), method: :put %>
+                <%#= link_to image_tag('move_top.png'), admin_tag_position_path(tag, move: :top), method: :put %>
+                <%#= link_to image_tag('move_up.png'), admin_tag_position_path(tag, move: :up), method: :put %>
+                <%#= link_to image_tag('move_down.png'), admin_tag_position_path(tag, move: :down), method: :put %>
+                <%#= link_to image_tag('move_bottom.png'), admin_tag_position_path(tag, move: :bottom), method: :put %>
               </div>
             </td>
             <td>
