--- a/app/views/pages/selection.html.erb
+++ b/app/views/pages/selection.html.erb
@@ -3,14 +3,10 @@
 <div id="wrapper">
   <div id="time-panel" style="width: <%= @selection.width %>px;">
     <div class="line">
-      <% @selection.top.each do |slide| %>
-        <%= render :partial => 'selected', :object => slide %>
-      <% end %>
+        <%= render partial: 'selection', collection: @selection.top %>
     </div>
     <div class="line">
-      <% @selection.bottom.each do |slide| %>
-        <%= render :partial => 'selected', :object => slide %>
-      <% end %>
+        <%= render partial: 'selection', collection: @selection.bottom %>
     </div>
   </div>
 </div>
