--- a/app/views/admin/cards/_form.html.erb
+++ b/app/views/admin/cards/_form.html.erb
@@ -17,7 +17,7 @@
           símbolos como : / % ? etcétera. Si lo dejas en blanco se generará automáticamente
           cuando guardes.
         </span>
-          <%= form.text_field :url %>
+          <%= form.text_field :slug %>
         </p>
 
         <p>
