--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -16,6 +16,7 @@
   <%= link_to 'Despachodepan', admin_root_path, :class => 'lpn' %> >
   <%= link_to_unless_current t('admin.resources.cards').downcase, admin_cards_path %> |
   <%= link_to_unless_current 'noticias', admin_posts_path %> | 
+  <%= link_to_unless_current 'selección', admin_selections_path %> |
   <%= link_to_unless_current t('admin.resources.colors').downcase, admin_colors_path %> |
   <%= link_to_unless_current t('admin.resources.tags').downcase, admin_tags_path %> |
 </div>
