--- a/app/views/admin/pan_files/_form.html.erb
+++ b/app/views/admin/pan_files/_form.html.erb
@@ -1,26 +1,14 @@
-<div class="nested">
-  <h3><%= file.new_record? ? 'Añadir' : 'Modificar'  %> un archivo</h3>
-  <%= form_for [:admin, file.card, file], :html => {:multipart => true}  do |form| %>
-    <%= form.hidden_field :card_id %>
-    <%= form.hidden_field :parent_id %>
-
-    <p>
-      <%= form.label :title, 'Título' %>
-      <%= form.text_field :title  %>
-    </p>
-    <p>
-      <%= form.label :uploaded_data, 'Archivo'  %>
-      <% if file.filename %>
-        <span>Archivo actual: <%= file.filename %></span>
-        <span class="info">Para cambiar este archivo, simplemente sube otro.</span>
-        <br/><br/>
-      <% end %>
-      <%= form.file_field :uploaded_data %>
-    </p>
-    <p>
-      <br/>
-      <%= form.submit (file.new_record? ? 'Añadir' : 'Modificar') %>
-    </p>
-  <% end %>
+<div class="actions">
+  <%=  link_to 'Cancelar', admin_card_pan_files_path(card) %>
 </div>
 
+<%= simple_form_for [:admin, card, pan_file] do |form| %>
+    <%= form.input :text %>
+    <%= form.input :file %>
+    <% if pan_file.file.present? %>
+        <div class="info" style="margin-top: 10px;">
+          Fichero actual: <%= link_to pan_file.file, pan_file.file.url %>
+        </div>
+    <% end %>
+    <%= form.submit 'Guardar' %>
+<% end %>
