--- a/app/views/pages/thumb.html.erb
+++ b/app/views/pages/thumb.html.erb
@@ -1,10 +1,10 @@
 <div class="mini_slide" style="border-color: <%= "##{@slide.card.color.value}" %>;">
   <div class="mini_image">
-    <%= image_tag(@slide.image.stored_url(:thumb), :id => 'preview_image') %>
+    <%= image_tag(@slide.file.url(:thumb), :id => 'preview_image') %>
   </div>
   <% if @slide.body.present? %>
       <div class="mini_text" style="color: <%= "##{@slide.card.color.value}" %>;">
-        <%= textilize(@slide.body.strip, 150) %>
+        <%= render_body(@slide) %>
       </div>
   <% end -%>
 </div>
