--- a/app/views/admin/slide_images/_form.html.erb
+++ b/app/views/admin/slide_images/_form.html.erb
@@ -9,6 +9,7 @@
     <% end %>
     <%= form.input :file, as: :file, label: 'Imágen' %>
     <%= form.input :body, as: :text, label: 'Texto' %>
+    <%= form.input :extra, collection: {'Sí' => :main}, label: 'Es principal' %>
     <%= form.submit 'Guardar' %>
 <% end %>
 
