--- a/app/assets/stylesheets/admin/application.css.scss
+++ b/app/assets/stylesheets/admin/application.css.scss
@@ -99,11 +99,11 @@ table thead {
     padding: 0.2em 0; 
     background-color: white;
 }
-table th {font-weight: bold; padding: 0.2em 0;}
+table th {font-weight: bold; padding: 0.2em 0.4em;}
 
 table thead tr {@include round-top;}
 table tr {border-bottom: 1px solid $azulclaro;}
-table td {padding: 0.4em 0em 0.3em 0.2em;}
+table td {padding: 0.4em 0.4em 0.3em 0.4em;}
 table td.title {width: 20em;}
 table td.title a {display: block;}
 table td.title a.edit {font-size: 100%; }
