--- a/app/assets/stylesheets/application/cards.css.scss
+++ b/app/assets/stylesheets/application/cards.css.scss
@@ -157,7 +157,7 @@ body#cards {
   }
 
   .slide_text {
-    text-align: center;
+    text-align: left;
     font-size: 10px;
     padding: 8px 0 0 0;
   }
